--- a/src/main/resources/templates/layout/sidebar.html
+++ b/src/main/resources/templates/layout/sidebar.html
@@ -8,7 +8,7 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                     </a>
 
-                    <a class="nav-link" th:text="Student">
+                    <a class="nav-link" th:text="Student" th:href="@{/student}">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                     </a>
 
