--- a/src/main/resources/templates/student/update.html
+++ b/src/main/resources/templates/student/update.html
@@ -1,10 +1,107 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org">
 
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="ABC Group" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Student</title>
+    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}" />
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(() => {
+            const avatarFile = $("#avatarFile");
+            avatarFile.change(function (e) {
+                const imgURL = URL.createObjectURL(e.target.files[0]);
+                $("#avatarPreview").attr("src", imgURL);
+                $("#avatarPreview").css({ "display": "block" });
+            });
+        });
+    </script>
+</head>
+
+<body class="sb-nav-fixed">
+    <div th:replace="layout/header :: header"></div>
+    <div id="layoutSidenav">
+        <div th:replace="layout/sidebar :: sidebar"></div>
+        <div id="layoutSidenav_content">
+            <main>
+                <div class="container-fluid px-4">
+                    <h1 class="mt-4">Student</h1>
+                    <ol class="breadcrumb mb-4">
+                        <li class="breadcrumb-item"><a th:href="@{/}">Dashboard</a></li>
+                        <li class="breadcrumb-item active">Student</li>
+                    </ol>
+                    <form action="#" th:action="@{/student/update}" method="POST" enctype="multipart/form-data"
+                        th:object="${student}">
+                        <div class="row mt-3 " style="display: none;">
+                            <input type="text" class="form-control" th:field="*{id}" />
+                        </div>
+                        <div class="row mt-3">
+                            <label>Họ và tên</label>
+                            <input type="text" class="form-control" placeholder="Họ và tên" aria-label="Họ và tên"
+                                th:field="*{fullName}" />
+                        </div>
+                        <div class="row mt-3">
+                            <label>Ngày sinh</label>
+                            <input type="date" class="form-control" placeholder="Ngày sinh" aria-label="MM/dd/yyyy"
+                                th:field="*{dateOfBirth}" />
+                        </div>
+                        <div class="row mt-3">
+                            <label>Gmail</label>
+                            <input type="text" class="form-control" placeholder="Gmail" aria-label="email"
+                                th:field="*{email}" />
+                        </div>
+                        <div class="row mt-3">
+                            <label>Số điện thoại</label>
+                            <input type="text" class="form-control" placeholder="Số điện thoại" aria-label="phoneNumber"
+                                th:field="*{phoneNumber}" />
+                        </div>
+                        <div class="row mt-3">
+                            <label>Địa chỉ</label>
+                            <input type="text" class="form-control" placeholder="Địa chỉ" aria-label="address"
+                                th:field="*{address}" />
+                        </div>
+                        <div class="row mt-3">
+                            <label>Giới tính</label>
+                            <select class="form-select form-select-sm" aria-label=".form-select-sm example"
+                                th:field="*{gender}">
+                                <option disabled value="" selected>Giới tính</option>
+                                <option th:value="FEMALE">Female</option>
+                                <option th:value="MALE">Male</option>
+                                <option th:value="OTHER">Other</option>
+                            </select>
+                        </div>
+                        <div class="row mt-3">
+                            <label for="avatarFile" class="form-label">Ảnh đại diện</label>
+                            <input class="form-control" type="file" id="avatarFile" accept=".png, .jpg, .jpeg"
+                                name="avatarFile" />
+                        </div>
+                        <div class="col-12 mb-3 mt-3">
+                            <img style="max-height: 250px; display: none;" alt="avatar preview" id="avatarPreview" />
+                        </div>
+                        <div class="d-flex justify-content-end mt-3">
+                            <a class="btn btn-warning mx-2" th:href="@{/student}">Hủy</a>
+                            <button class="btn btn-primary" type="submit">Lưu</button>
+                        </div>
+                    </form>
+                </div>
+            </main>
+            <div th:replace="layout/footer :: footer"></div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous"></script>
+    <script th:src="@{/js/scripts.js}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+    <script th:src="@{/assets/demo/chart-area-demo.js}"></script>
+    <script th:src="@{/assets/demo/chart-bar-demo.js}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
+        crossorigin="anonymous"></script>
+    <script th:src="@{/js/datatables-simple-demo.js}"></script>
 </body>
+
 </html>
