--- a/src/main/resources/templates/student/detail.html
+++ b/src/main/resources/templates/student/detail.html
@@ -52,6 +52,9 @@
                   <td th:text="${student.gender}"></td>
                 </tr>
                 <tr>
+                  <th scope="row">Quyền hạn</th>
+                  <td th:text="${student.role.name}"></td>
+                <tr>
                   <th scope="row">Ảnh đại diện</th>
                   <td><img style="max-height: 150px;" alt="avatar" /></td>
                 </tr>
