--- a/src/main/resources/templates/course/show.html
+++ b/src/main/resources/templates/course/show.html
@@ -1,10 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org">
 
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="ABC Group" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Course</title>
+    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}" />
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+</head>
+
+<body class="sb-nav-fixed">
+<div th:replace="~{layout/header :: header}"></div>
+<div id="layoutSidenav">
+    <div th:replace="~{layout/sidebar :: sidebar}"></div>
+    <div id="layoutSidenav_content">
+        <main>
+            <div class="container-fluid px-4">
+                <h1 class="mt-4">Course</h1>
+                <ol class="breadcrumb mb-4">
+                    <li class="breadcrumb-item"><a>Dashboard</a></li>
+                    <li class="breadcrumb-item active">Course</li>
+                </ol>
+                <div class="my-3">
+                    <div class="row d-flex justify-content-end">
+                        <div class="col-md-4 mt-2">
+                            <a class="btn btn-info" th:href="@{/course/create}">Thêm mới</a>
+                        </div>
+                    </div>
+                </div>
+                <div>
+                    <table class="table table-hover table-responsive-xl">
+                        <thead class="thead-light">
+                        <tr>
+                            <th scope="col">STT</th>
+                            <th scope="col">Khóa học</th>
+                            <th scope="col">Mô tả</th>
+                            <th scope="col">Hành động</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="course : ${courses}">
+                            <td></td>
+                            <td th:text="${course.name}"></td>
+                            <td th:text="${course.description}"></td>
+                            <td>
+                                <a title="View" th:href="@{/course/detail/{id}(id=${course.id})}">Chi tiết</a>
+                                &nbsp;
+                                <a title="Edit" th:href="@{/course/update/{id}(id=${course.id})}">Sửa</a>
+                                &nbsp;
+                                <a id="btnDelete" title="Delete"
+                                   th:href="@{/course/delete/{id}(id=${course.id})}">Xóa</a>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </main>
+        <div th:replace="~{layout/footer :: footer}"></div>
+    </div>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous"></script>
+<script th:src="@{/js/scripts.js}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+<script th:src="@{/assets/demo/chart-area-demo.js}"></script>
+<script th:src="@{/assets/demo/chart-bar-demo.js}"></script>
+<script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
+        crossorigin="anonymous"></script>
+<script th:src="@{/js/datatables-simple-demo.js}"></script>
 </body>
+
 </html>
