--- a/src/main/resources/templates/course/update.html
+++ b/src/main/resources/templates/course/update.html
@@ -1,10 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html xmlns:th="http://www.thymeleaf.org">
 
+<head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="ABC Group" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Course</title>
+    <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" th:href="@{/css/styles.css}" />
+    <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script>
+        $(document).ready(() => {
+            const avatarFile = $("#avatarFile");
+            avatarFile.change(function (e) {
+                const imgURL = URL.createObjectURL(e.target.files[0]);
+                $("#avatarPreview").attr("src", imgURL);
+                $("#avatarPreview").css({ "display": "block" });
+            });
+        });
+    </script>
+</head>
+
+<body class="sb-nav-fixed">
+    <div th:replace="layout/header :: header"></div>
+    <div id="layoutSidenav">
+        <div th:replace="layout/sidebar :: sidebar"></div>
+        <div id="layoutSidenav_content">
+            <main>
+                <div class="container-fluid px-4">
+                    <h1 class="mt-4">Course</h1>
+                    <ol class="breadcrumb mb-4">
+                        <li class="breadcrumb-item"><a th:href="@{/}">Dashboard</a></li>
+                        <li class="breadcrumb-item active">Course</li>
+                    </ol>
+                    <form action="#" th:action="@{/course/update}" method="POST" enctype="multipart/form-data"
+                        th:object="${currentCourse}">
+                        <div class="row mt-3 " style="display: none;">
+                            <input type="text" class="form-control" th:field="*{id}" />
+                        </div>
+                        <div class="row mt-3">
+                            <label>Tên khóa học</label>
+                            <input type="text" class="form-control" placeholder="Tên khóa học" aria-label="name"
+                                th:field="*{name}" />
+                        </div>
+                        <div class="row mt-3">
+                            <label>Nội dung</label>
+                            <textarea type="text" class="form-control" placeholder="Mô tả" aria-label="description"
+                                      th:field="*{description}"></textarea>
+                        </div>
+                        <!-- Chưa đúng ý nghĩa, tạm thời sử dụng -->
+                        <div class="row mt-3">
+                            <label>Độ dài khóa học</label>
+                            <input type="text" class="form-control" placeholder="Thời gian" aria-label="max"
+                                th:field="*{max}" />
+                        </div>
+                        <div class="row mt-3">
+                            <label for="avatarFile" class="form-label">Hình ảnh</label>
+                            <input class="form-control" type="file" id="avatarFile" accept=".png, .jpg, .jpeg"
+                                name="avatarFile" />
+                        </div>
+                        <div class="col-12 mb-3 mt-3">
+                            <img style="max-height: 250px; display: none;" alt="avatar preview" id="avatarPreview" />
+                        </div>
+                        <div class="row mt-3">
+                            <label>Tác giả</label>
+                            <input type="text" class="form-control" placeholder="Tác giả" aria-label="instructor"
+                                th:field="*{instructor}" />
+                        </div>
+                        <div class="d-flex justify-content-end mt-3">
+                            <a class="btn btn-warning mx-2" th:href="@{/course}">Hủy</a>
+                            <button class="btn btn-primary" type="submit">Lưu</button>
+                        </div>
+                    </form>
+                </div>
+            </main>
+            <div th:replace="layout/footer :: footer"></div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        crossorigin="anonymous"></script>
+    <script th:src="@{/js/scripts.js}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+    <script th:src="@{/assets/demo/chart-area-demo.js}"></script>
+    <script th:src="@{/assets/demo/chart-bar-demo.js}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
+        crossorigin="anonymous"></script>
+    <script th:src="@{/js/datatables-simple-demo.js}"></script>
 </body>
+
 </html>
