--- a/src/main/resources/templates/student/create.html
+++ b/src/main/resources/templates/student/create.html
@@ -73,6 +73,15 @@
                             </select>
                         </div>
                         <div class="row mt-3">
+                            <label>Quyền hạn</label>
+                            <select class="form-select form-select-sm" aria-label=".form-select-sm example"
+                                th:field="*{role}">
+                                <option disabled value="" selected>Quyền hạn</option>
+                                <option th:value="1">Admin</option>
+                                <option th:value="2">User</option>
+                            </select>
+                        </div>
+                        <div class="row mt-3">
                             <label for="avatarFile" class="form-label">Ảnh đại diện</label>
                             <input class="form-control" type="file" id="avatarFile" accept=".png, .jpg, .jpeg"
                                 name="avatarFile" />
