--- a/src/main/resources/templates/course/detail.html
+++ b/src/main/resources/templates/course/detail.html
@@ -37,7 +37,7 @@
                 </tr>
                 <tr>
                   <th scope="row">Độ dài</th>
-                  <td th:text="${course.max}"></td>
+                  <td th:text="${course.maxStudent}"></td>
                 </tr>
                 <tr>
                   <th scope="row">Tác giả</th>
