--- a/src/main/resources/templates/course/update.html
+++ b/src/main/resources/templates/course/update.html
@@ -54,7 +54,7 @@
                         <div class="row mt-3">
                             <label>Độ dài khóa học</label>
                             <input type="text" class="form-control" placeholder="Thời gian" aria-label="max"
-                                th:field="*{max}" />
+                                th:field="*{maxStudent}" />
                         </div>
                         <div class="row mt-3">
                             <label for="avatarFile" class="form-label">Hình ảnh</label>
