--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -8,7 +8,7 @@
         <!-- Navbar Search-->
         <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
             <p style="color: white;">Welcome,
-                <span th:text="${student.fullName}" style="color: white;"></span>
+                <span th:text ="${session.firstName}" style="color: white;"></span>
             </p>
         </form>
         <!-- Navbar-->
