--- a/src/main/resources/templates/client/detail_course.html
+++ b/src/main/resources/templates/client/detail_course.html
@@ -34,9 +34,23 @@
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </div>
-                <div class="text-white d-flex">
+                <div sec:authorize="isAnonymous()" class="text-white d-flex">
                     <a class="btn" type="button" th:href="@{/register}">Đăng ký</a>
                     <a class="btn" type="button" th:href="@{/login}">Đăng nhập</a>
+                </div>
+                <div sec:authorize="isAuthenticated()" class="btn-group dropdown-center" style="margin-right: 100px;">
+                    <button type="button" class="btn btn-danger" data-bs-toggle="dropdown" aria-expanded="false" 
+                    style="width: 40px; height: 40px; border-radius: 50%; display: flex; justify-content: center;">
+                        User
+                    </button>
+                    <ul class="dropdown-menu ">
+                        <li><a class="dropdown-item" href="#">Trang cá nhân</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" th:href="@{/enrollmented-course}">Khóa học của tôi</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="#">Cài đặt</a></li>
+                        <li><a class="dropdown-item" th:href="@{/logout}">Đăng xuất</a></li>
+                    </ul>
                 </div>  
             </div>
         </nav>
@@ -47,10 +61,11 @@
     </sidebar>
     
     <!-- Content -->
-    <div  class="container" style="margin-top: 100px;">
+    <div  class="container" style="margin-top: 100px; margin-bottom: 200px;">
         <div class="container">
-            <div class="row">
+            <form class="row" th:action="@{/detail-course}" method="post">
                 <div class="col-md-8">
+                    <input type="hidden" name="id" th:value="${course.id}" />
                     <h2 th:text="${course.name}"></h2>
                     <p th:text="${course.description}"></p>
                     <div>
@@ -82,9 +97,29 @@
                     <div class="row">
                         <img src="..." class="" alt="...">
                         <p th:text="${course.price} != 0 ? ${course.price}:'Miễn phí'"></p>
-                        <a th:href="@{/enrollment-course}" class="btn btn-primary" style="width: auto;">Đăng ký khóa học</a>
+                        <button th:if="${#authorization.expression('isAuthenticated()')}" type="button" class="btn btn-primary" style="width: auto;" data-bs-toggle="modal" data-bs-target="#exampleModal">Đăng ký khóa học</button>
+                        <a th:if="${#authorization.expression('isAnonymous()')}" 
+                            class="btn btn-primary" style="width: auto;"
+                            th:href="@{/login}">Đăng ký khóa học</a>
+                        <!-- Modal -->
+                        <div sec:authorize="isAuthenticated()" class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h1 class="modal-title fs-5" id="exampleModalLabel">Thông báo</h1>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <div class="modal-body alert alert-success" role="alert">
+                                        Bạn đã đăng ký khóa học thành công! Chúc bạn có những buổi học vui vẻ.
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="submit" class="btn btn-primary">Xong</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <p class="mt-3">Thời gian bắt đầu - Thời gian kết thúc</p>
-                        <p>2024 - 2025</p>
+                        <p><span>2024</span>> - <span>2025</span></p>
                         <p>Đã có 
                             <span th:text="${course.quantityStudent} + '/' + ${course.maxStudent}"></span>
                         sinh viên đăng ký</p>
@@ -93,7 +128,7 @@
                         sinh viên</p>
                     </div>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
 
