--- a/src/main/resources/templates/student/detail.html
+++ b/src/main/resources/templates/student/detail.html
@@ -33,8 +33,8 @@
                 </tr>
                 <tr>
                   <th scope="row">Ngày sinh</th>
-                  <td th:text="${student.dateOfBirth}"></td>
-                </tr>
+                  <td th:text="${#dates.format(student.dateOfBirth, 'dd/MM/yyyy')}"></td>
+              </tr>              
                 <tr>
                   <th scope="row">Email</th>
                   <td th:text="${student.email}"></td>
