--- a/src/main/resources/templates/admin/homepage.html
+++ b/src/main/resources/templates/admin/homepage.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 
 <head>
+    <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="ABC Group" />
@@ -17,28 +18,39 @@
     <div id="layoutSidenav">
         <div th:replace="~{layout/sidebar :: sidebar}"></div>
         <div id="layoutSidenav_content">
-            <h1 class="text-center"></h1>
-            <table class="table table-hover table-responsive-xl" style="margin-top: 0;">
-                <thead class="thead-light">
-                <tr>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr >
-                    <td ></td>
-                    <td ></td>
-                    <td ></td>
-                    <td ></td>
-                </tr>
-                </tbody>
-            </table>
-            <div class="d-flex justify-content-end mt-3">
-                <a class="btn btn-warning mx-2" ></a>
-            </div>
+            <main>
+                <div class="container-fluid px-4">
+                    <h1 class="mt-4">Báo cáo tuần</h1>
+                    <div>
+                        <table class="table table-hover table-responsive-xl">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th scope="col">STT</th>
+                                    <th scope="col">Khóa học</th>
+                                    <th scope="col">Số lượng đăng ký</th>
+                                    <th scope="col">Tuần</th>
+                                    <th scope="col">Ngày báo cáo</th>
+                                    <th scope="col">Hành động</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td>
+                                        <a class="btn btn-primary btn-sm">
+                                            Tải báo cáo
+                                        </a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </main>
             <div th:replace="~{layout/footer :: footer}"></div>
         </div>
     </div>
