--- a/src/main/resources/templates/layout/sidebar.html
+++ b/src/main/resources/templates/layout/sidebar.html
@@ -4,19 +4,14 @@
             <div class="sb-sidenav-menu">
                 <div class="nav">
                     <div class="sb-sidenav-menu-heading">Features</div>
-                    <a class="nav-link" th:text="Dashboard">
+                    <a class="nav-link" th:text="Report" th:href="@{/admin}">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                     </a>
-
                     <a class="nav-link" th:text="Student" th:href="@{/student}">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                     </a>
 
                     <a class="nav-link" th:text="Course" th:href="@{/course}">
-                        <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                    </a>
-
-                    <a class="nav-link" th:text="Enrollment" th:href="@{/enrollment}">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                     </a>
                 </div>
