--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -1,14 +1,14 @@
 <div th:fragment="header">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
         <!-- Navbar Brand-->
-        <a class="navbar-brand ps-3" th:href="@{/static}">Course</a>
+        <a class="navbar-brand ps-3" th:href="@{/admin}">Course</a>
         <!-- Sidebar Toggle-->
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
                 class="fas fa-bars"></i></button>
         <!-- Navbar Search-->
         <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
             <p style="color: white;">Welcome,
-                <span th:text ="${session.firstName}" style="color: white;"></span>
+                <span th:text ="${session.fullName}" style="color: white;"></span>
             </p>
         </form>
         <!-- Navbar-->
