--- a/src/main/resources/templates/layout/sidebar.html
+++ b/src/main/resources/templates/layout/sidebar.html
@@ -10,14 +10,15 @@
                     <a class="nav-link" th:text="Student" th:href="@{/student}">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                     </a>
-
                     <a class="nav-link" th:text="Course" th:href="@{/course}">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                     </a>
                 </div>
             </div>
             <div class="sb-sidenav-footer">
-                <div class="small">Logged in as:</div>
+                <div class="small">Logged in as:
+                    <span th:text ="${session.fullName}" style="color: white;"></span>
+                </div>
             </div>
         </nav>
     </div>
