--- a/src/main/resources/templates/client/detail_course.html
+++ b/src/main/resources/templates/client/detail_course.html
@@ -108,19 +108,16 @@
                         <p th:text="${course.price} != 0 ? ${course.price}:'Miễn phí'"></p>
                         <button th:if="${#authorization.expression('isAuthenticated()')}" 
                             type="button"
-                            class="btn btn-primary" 
+                            class="btn" 
                             style="width: auto;" 
                             data-bs-toggle="modal"
                             data-bs-target="#exampleModal"
-                            th:text="${checkEnrollment} == null ? 'Đăng ký khóa học': 'Khóa học đã đăng ký'"
-                            th:attr="${checkEnrollment} == null ? 'disabled' : null"
-                            th:classappend="${checkEnrollment} == null ? 'btn-primary' : 'btn-success'">Đăng ký khóa học</button>
-                        <a th:if="${#authorization.expression('isAnonymous()')}" class="btn"
+                            th:text="${!checkMaxStudent ? 'Khóa học đã đầy' : (checkEnrollment == null ? 'Đăng ký khóa học' : 'Khóa học đã đăng ký')}"
+                            th:classappend="${!checkMaxStudent ? 'btn-warning' : (checkEnrollment == null ? 'btn-primary' : 'btn-success')}"
+                            th:attrappend="disabled=${!checkMaxStudent ? 'disabled' : (checkEnrollment != null ? 'disabled' : null)}"></button>
+                        <a th:if="${#authorization.expression('isAnonymous()')}" class="btn-primary"
                             style="width: auto;" 
-                            th:href="@{/login}"
-                            th:text="${checkEnrollment} == null ? 'Đăng ký khóa học': 'Khóa học đã đăng ký'"
-                            th:attr="${checkEnrollment} == null ? 'disabled' : null"
-                            th:classappend="${checkEnrollment} == null ? 'btn-primary' : 'btn-success'">Đăng ký khóa học</a>
+                            th:href="@{/login}">Đăng ký khóa học</a>
                         <!-- Modal -->
                         <div sec:authorize="isAuthenticated()" class="modal fade" id="exampleModal" tabindex="-1"
                             aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -148,7 +145,7 @@
                         </p>
                         <p>Còn trống
                             <span th:text="${course.maxStudent} - ${course.quantityStudent}"></span>
-                            sinh viên
+                        sinh viên
                         </p>
                     </div>
                 </div>
@@ -157,7 +154,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="py-4 bg-dark mt-auto">
+    <footer class="py-4 bg-dark">
         <div class="container-fluid px-4">
             <div class="d-flex align-items-center justify-content-between small">
                 <div class="text-white">Copyright &copy; Thái Nguyễn Quang</div>
