--- a/src/main/resources/templates/course/show.html
+++ b/src/main/resources/templates/course/show.html
@@ -13,86 +13,85 @@
 </head>
 
 <body class="sb-nav-fixed">
-<div th:replace="~{layout/header :: header}"></div>
-<div id="layoutSidenav">
-    <div th:replace="~{layout/sidebar :: sidebar}"></div>
-    <div id="layoutSidenav_content">
-        <main>
-            <div class="container-fluid px-4">
-                <h1 class="mt-4">Course</h1>
-                <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item"><a>Dashboard</a></li>
-                    <li class="breadcrumb-item active">Course</li>
-                </ol>
-                <div class="my-3">
-                    <div class="row d-flex justify-content-end">
-                        <div class="col-md-4 mt-2">
-                            <a class="btn btn-info" th:href="@{/course/create}">Thêm mới</a>
+    <div th:replace="~{layout/header :: header}"></div>
+    <div id="layoutSidenav">
+        <div th:replace="~{layout/sidebar :: sidebar}"></div>
+        <div id="layoutSidenav_content">
+            <main>
+                <div class="container-fluid px-4">
+                    <h1 class="mt-4">Course</h1>
+                    <ol class="breadcrumb mb-4">
+                        <li class="breadcrumb-item"><a>Dashboard</a></li>
+                        <li class="breadcrumb-item active">Course</li>
+                    </ol>
+                    <div class="my-3">
+                        <div class="row d-flex justify-content-end">
+                            <div class="col-md-4 mt-2">
+                                <a class="btn btn-info" th:href="@{/course/create}">Thêm mới</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <table class="table table-hover table-responsive-xl">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th scope="col">STT</th>
+                                    <th scope="col">Khóa học</th>
+                                    <th scope="col">Mô tả</th>
+                                    <th scope="col">Hành động</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr th:each="course : ${courses}">
+                                    <td></td>
+                                    <td th:text="${course.name}"></td>
+                                    <td th:text="${course.description}"></td>
+                                    <td>
+                                        <a title="View" th:href="@{/course/detail/{id}(id=${course.id})}">Chi tiết</a>
+                                        &nbsp;
+                                        <a title="Edit" th:href="@{/course/update/{id}(id=${course.id})}">Sửa</a>
+                                        &nbsp;
+                                        <a id="btnDelete" title="Delete"
+                                            th:href="@{/course/delete/{id}(id=${course.id})}">Xóa</a>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <div aria-label="Page navigation example">
+                            <ul class="pagination justify-content-center">
+                                <li class="page-item">
+                                    <a th:classappend="${currentPage == 1} ? 'page-link disabled' : 'page-link'"
+                                        th:href="@{/course(page=${currentPage-1})}" aria-label="Previous">
+                                        <span aria-hidden="true">&laquo;</span>
+                                    </a>
+                                </li>
+                                <li class="page-item" th:each="page : ${#numbers.sequence(1, totalPage)}"
+                                    th:classappend="${page == currentPage} ? 'active':''">
+                                    <a class="page-link" th:href="@{/course(page=${page})}" th:text="${page}"></a>
+                                </li>
+                                <li class="page-item">
+                                    <a th:classappend="${currentPage == totalPage} ? 'page-link disabled' : 'page-link'"
+                                        th:href="@{/course(page=${currentPage+1})}" aria-label="Next">
+                                        <span aria-hidden="true">&raquo;</span>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
-                <div>
-                    <table class="table table-hover table-responsive-xl">
-                        <thead class="thead-light">
-                        <tr>
-                            <th scope="col">STT</th>
-                            <th scope="col">Khóa học</th>
-                            <th scope="col">Mô tả</th>
-                            <th scope="col">Hành động</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr th:each="course : ${courses}">
-                            <td></td>
-                            <td th:text="${course.name}"></td>
-                            <td th:text="${course.description}"></td>
-                            <td>
-                                <a title="View" th:href="@{/course/detail/{id}(id=${course.id})}">Chi tiết</a>
-                                &nbsp;
-                                <a title="Edit" th:href="@{/course/update/{id}(id=${course.id})}">Sửa</a>
-                                &nbsp;
-                                <a id="btnDelete" title="Delete"
-                                   th:href="@{/course/delete/{id}(id=${course.id})}">Xóa</a>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                    <div aria-label="Page navigation example">
-                        <ul class="pagination justify-content-center">
-                            <li class="page-item">
-                                <a th:classappend="${currentPage == 1} ? 'page-link disabled' : 'page-link'"
-                                    th:href="@{/course(page=${currentPage-1})}" aria-label="Previous">
-                                    <span aria-hidden="true">&laquo;</span>
-                                </a>
-                            </li>
-                            <li class="page-item" th:each="page : ${#numbers.sequence(1, totalPage)}"
-                                th:classappend="${page == currentPage} ? 'active':''">
-                                <a class="page-link" th:href="@{/course(page=${page})}"
-                                    th:text="${page}"></a>
-                            </li>
-                            <li class="page-item">
-                                <a th:classappend="${currentPage == totalPage} ? 'page-link disabled' : 'page-link'"
-                                    th:href="@{/course(page=${currentPage+1})}" aria-label="Next">
-                                    <span aria-hidden="true">&raquo;</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </main>
-        <div th:replace="~{layout/footer :: footer}"></div>
+            </main>
+            <div th:replace="~{layout/footer :: footer}"></div>
+        </div>
     </div>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
-<script th:src="@{/js/scripts.js}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-<script th:src="@{/assets/demo/chart-area-demo.js}"></script>
-<script th:src="@{/assets/demo/chart-bar-demo.js}"></script>
-<script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
+    <script th:src="@{/js/scripts.js}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
+    <script th:src="@{/assets/demo/chart-area-demo.js}"></script>
+    <script th:src="@{/assets/demo/chart-bar-demo.js}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
         crossorigin="anonymous"></script>
-<script th:src="@{/js/datatables-simple-demo.js}"></script>
+    <script th:src="@{/js/datatables-simple-demo.js}"></script>
 </body>
 
 </html>
